Updates including TODO

--- a/fifth-cabinet-of-najib-razak.ipynb
+++ b/fifth-cabinet-of-najib-razak.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -11,6 +11,11 @@
     "import requests\n",
     "import json\n",
     "\n",
+    "# Open Data of 5th Cabinet of Malaysia is available here:\n",
+    "# http://sinar-malaysia.popit.mysociety.org/api/v0.1/organizations/55b72847916cff2b6d55ab7f\n",
+    "\n",
+    "# To learn more about how to use API https://sinar-malaysia.popit.mysociety.org/api\n",
+    "\n",
     "request = requests.get('http://sinar-malaysia.popit.mysociety.org/api/v0.1/organizations/55b72847916cff2b6d55ab7f')\n",
     "\n",
     "members = json.loads(request.content)['result']['memberships']"
@@ -18,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -33,20 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "68"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 68 Ministers!\n"
+     ]
     }
    ],
    "source": [
@@ -61,7 +63,20 @@
     "\n",
     "#how many ministers?\n",
     "\n",
-    "print \"We have\" len(person_ids)\n"
+    "print \"We have \" + str(len(person_ids)) + \" Ministers!\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "TODO Examples:\n",
+    "\n",
+    "- Get list of Posts\n",
+    "- Get list of Names and details of people holding the posts\n",
+    "- To fun examples like average age etc."
    ]
   },
   {
