Refactor out checks as functions for readability

--- a/popit-debug.ipynb
+++ b/popit-debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1583,7 +1583,7 @@
        "118    P222  545f70225222837c2c05b46b                  Lawas"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1629,28 +1629,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P154 Mersing 545f701e5222837c2c05b42b: Too many members\n",
-      "P156 Kota Tinggi 545f701e5222837c2c05b42d: Too many members\n",
-      "P208 Sarikei 545f70215222837c2c05b461: Too many members\n",
-      "P211 Lanang 545f70225222837c2c05b464: Too many members\n",
-      "P222 Lawas 545f70225222837c2c05b46b: Too many members\n",
-      "P004 Langkawi 5365adcc19ee29270d8a9f00: Too many members\n",
-      "P003 Arau 5365a38919ee29270d8a9eff: Too many members\n",
-      "P002 Kangar 5365a37519ee29270d8a9efe: Too many members\n",
-      "P008 Pokok Sena 5365ae2e19ee29270d8a9f04: Too many members\n",
-      "P009 Alor Setar 5365ae5219ee29270d8a9f05: Too many members\n",
-      "P011 Pendang 5365aeb019ee29270d8a9f07: Too many members\n",
-      "P006 Kubang Pasu 5365adf819ee29270d8a9f02: Too many members\n",
-      "P012 Jerai 5365b8fd19ee29270d8a9f08: Too many members\n",
-      "P023 Rantau Panjang 5365cb7119ee29270d8a9f14: Too many members\n",
-      "P015 Sungai Petani 5365b94219ee29270d8a9f0b: Too many members\n",
-      "P014 Merbok 5365b92919ee29270d8a9f0a: Too many members\n",
-      "P024 Kubang Kerian 5365cc9219ee29270d8a9f15: Too many members\n",
-      "P020 Pengkalan Chepa 5365cb1e19ee29270d8a9f11: Too many members\n",
-      "P013 Sik 5365b91219ee29270d8a9f09: No members\n",
-      "P026 Ketereh 5365cccc19ee29270d8a9f17: Too many members\n",
-      "P025 Bachok 5365ccaa19ee29270d8a9f16: Too many members\n",
-      "P028 Pasir Puteh 5365cd2b19ee29270d8a9f19: Too many members\n",
       "P030 Jeli 5365d08619ee29270d8a9f1b: Too many members\n",
       "P029 Machang 5365cd4519ee29270d8a9f1a: Too many members\n",
       "P027 Tanah Merah 5365cce419ee29270d8a9f18: Too many members\n",
@@ -1703,8 +1681,8 @@
       "P078 Cameron Highlands 5368435719ee29270d8a9f5c: Too many members\n",
       "P077 Tanjong Malim 53672a5919ee29270d8a9f55: Too many members\n",
       "P079 Lipis 5368437019ee29270d8a9f5d: Too many members\n",
-      "148\n",
-      "301\n"
+      "170\n",
+      "276\n"
      ]
     }
    ],
@@ -1729,7 +1707,8 @@
     "    \n",
     "    return info\n",
     "\n",
-    "def end_date(member):\n",
+    "\n",
+    "def has_end_date(member):\n",
     "    \n",
     "    if member.has_key('end_date') and member['end_date'] == '':\n",
     "        return False\n",
@@ -1737,11 +1716,20 @@
     "        return False\n",
     "    else:\n",
     "        return True\n",
+    "    \n",
+    "def current_MP(member):\n",
+    "    #Legislative tag term here would simply\n",
+    "    if (parser.parse(member['start_date'])).date() > current:\n",
+    "        if not has_end_date(member):\n",
+    "            return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
     "\n",
     "for post in posts:\n",
     "    \n",
     "    #current\n",
-    "    count = sum(1 for member in post['memberships'] if (parser.parse(member['start_date'])).date() > current and not end_date(member))\n",
+    "    count = sum(1 for member in post['memberships'] if current_MP(member) )\n",
     "    \n",
     "    if member_info(count,post):\n",
     "        print member_info(count,post)\n",
@@ -1760,6 +1748,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -1771,18 +1777,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
   }
  },
  "nbformat": 4,
