Add get person function.

--- a/popit-debug.ipynb
+++ b/popit-debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1583,7 +1583,7 @@
        "118    P222  545f70225222837c2c05b46b                  Lawas"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1655,7 +1655,6 @@
     "    \n",
     "    return info\n",
     "\n",
-    "\n",
     "def has_end_date(member):\n",
     "    \n",
     "    if member.has_key('end_date') and member['end_date'] == '':\n",
@@ -1673,11 +1672,12 @@
     "    else:\n",
     "        return False\n",
     "    \n",
-    "\n",
+    "    \n",
     "for post in posts:\n",
     "    for member in post['memberships']:\n",
     "        if not member.has_key('start_date'):\n",
     "            print member['id']\n",
+    "           \n",
     "    \n",
     "for post in posts:\n",
     "    \n",
@@ -1691,10 +1691,60 @@
     "        member_good.append(post['id'])\n",
     "            \n",
     "    member_total.append(count)\n",
-    "            \n",
-    "        \n",
+    "               \n",
     "print len(member_good)\n",
-    "print sum(member_total)\n"
+    "print sum(member_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "222"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def person(person_id):\n",
+    "    #Load up information of persons from Popit database\n",
+    "    req = requests.get('https://sinar-malaysia.popit.mysociety.org/api/v0.1/persons/' + person_id)\n",
+    "    return json.loads(req.content)['result']\n",
+    "\n",
+    "MP_ids = []\n",
+    "\n",
+    "for post in posts:\n",
+    "    for member in post['memberships']:\n",
+    "        if current_MP(member):\n",
+    "            MP_ids.append(member['person_id'])\n",
+    "\n",
+    "len(MP_ids)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "MPs =[]\n",
+    "\n",
+    "for MP in MP_ids:\n",
+    "    MPs.append(person(MP))\n",
+    "\n",
+    "    "
    ]
   },
   {
